# Qt-Advanced-Stylesheets

./: .gitignore  CMakeLists.txt  README.md  acss.pri  acss.pro
.github/workflows/: linux-builds.yml  windows_build.yaml
doc/: ass_qt_marketplace_description.md  ass_qt_marketplace_manifest.json  user-guide.md
examples/: CMakeLists.txt  examples.pro
examples/exporter/: exporter.cpp  exporter.pro
examples/full_features/: full_features.pro  full_features.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/full_features/qml/: simple_demo.qml
src/: AdvancedStylesheet.cpp  AdvancedStylesheet.h  QmlStyleUrlInterceptor.cpp  QmlStyleUrlInterceptor.h  QtAdvancedStylesheet.cpp  QtAdvancedStylesheet.h  ResourceGenerator.cpp  ResourceGenerator.h  StyleManager.cpp  StyleManager.h  acss_globals.h  src.pro
styles/qt_material/: README.md  material.json
styles/qt_material/themes/: dark_amber.xml  dark_blue.xml  dark_cyan.xml  dark_lightgreen.xml  dark_pink.xml  dark_purple.xml  dark_red.xml  dark_teal.xml  dark_yellow.xml  light_purple.xml  light_red.xml  light_teal.xml
stylesheets/qt_material/: material.css.template  material.json  material.xml
stylesheets/qt_material/themes/: light_amber.xml  light_blue.xml  light_cyan.xml  light_cyan_500.xml  light_lightgreen.xml  light_pink.xml  light_yellow.xml
